--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     font-family: sans-serif;
     background-color: #e5e5e5;
     height: 100vh;
+}
+
+#appContainer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,10 +13,10 @@ body {
 .app {
     width: 300px;
     height: 500px;
-    border: 5px solid #abcea1;
+    border: 5px solid #a2d2ff;
     border-radius: 8px;
     padding: 15px;
-    background-color: #fff;
+    background-color: #edede9;
     overflow-y: scroll;
 }
 
@@ -22,7 +25,7 @@ body {
 
 #addNew {
     display: flex;
-    background-color: rgba(171, 206, 161, 0.35);
+    background-color: rgba(49, 46, 95, 0.35);
     align-items: center;
     justify-content: space-between;
     padding: 5px 10px;
@@ -31,7 +34,7 @@ body {
 }
 
 .fa-plus {
-    background-color: #abcea1;
+    background-color: #a8dadc;
     padding: 3px;
     border-radius: 3px;
 }
@@ -42,8 +45,8 @@ body {
 }
 
 #tasks div{
-    background-color: #e2eede;
-    border: 3px solid #abcea1;
+    background-color: #a8dadc;
+    border: 3px solid #a2d2ff;
     padding: 5px;
     border-radius: 6px;
     display: grid;
